--- a/index.html
+++ b/index.html
@@ -1,14 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
-    
-    <title>Toufik</title>
-</head>
-<body>
-    
-</body>
+        <link rel="stylesheet" href="style.css">
+
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet">
+
+        <title>TOUFIK Web Developer</title>
+    </head>
+
+    <body>
+        <!--------------Top Banner----------------->
+
+        <section class="top-banner">
+            <div class="half-width banner-text-edit">
+                <h1>Hello I'm</h1>
+                <h1><span class="name-hightlight">Toufik Hasan</span></h1>
+                <p>I am a professional web developer.<br>I am looking forward to creating a website for you.</p>
+                <br>
+                <a class="button-1" href="https://www.linkedin.com/in/toufik9284" target="_blank">HIRE ME</a>
+            </div>
+
+            <div class="half-width">
+                <img class="banner-image" src="images/Profile-1.png" alt="Toufik">
+            </div>
+        </section>
+
+
+        <!--------------Biography----------------->
+
+        <section class="biography-banner">
+            <div class="half-width">
+                <img class="biography-image" src="images/Profile-2.png" alt="Toufik-biography">
+            </div>
+
+            <div class="half-width biography-text-edit">
+                <h1>Biography</h1>
+                <p>I am proficient in HTML, CSS & JavaScript. I am a web designer & developer.<br> I specialize in designing a website and everything. I have kept my talent immersed<br> in web development. I even have ideas for deployment, server & security services.<br> I hope to give you 100% web solution.</p>
+                <br>
+                <a class="button-2" href="images/CV/Profile.pdf" target="_blank">Download CV</a>
+            </div>
+        </section>
+
+
+        <!--------------Latest Work----------------->
+
+        <section class="latest-work">
+            <div class="latest-work-text">
+                <h1>My Latest Work</h1>
+            </div>
+
+            <div class="work-width first-work-width">
+                <img src="images/latest-work/work-1.png" alt="work-1">
+            </div>
+
+            <div class="work-width">
+                <img src="images/latest-work/work-2.jpg" alt="work-2">
+            </div>
+
+            <div class="work-width">
+                <img src="images/latest-work/work-3.jpg" alt="work-3">
+            </div>
+        </section>
+
+
+        <!--------------Contact Client----------------->
+
+        <section class="contact-client">
+            <div class="contact-client-text contact-client-text-1">
+                <h1>What Client aer say</h1>
+            </div>
+
+            <div class="contact-client-text contact-client-text-2">
+                <h3>IT Garden Ltd.</h3>
+                <p>Chairman & Web Developer</p>
+            </div>
+
+            <div class="contact-client-text contact-client-text-3">
+                <h4>
+                    "Have an idea? Please share your idea with us & implement it.<br>Contact my web development service, to create a responsive & customized website for you."
+                </h4>
+            </div>
+
+            <br><br>
+
+            <div class="contact-client-box">
+                <a href="#">
+                    <h3>Leave me a message in the</h3>
+                    <h1>toufik6815@gmail.com</h1>
+                </a>
+            </div>
+        </section>
+
+
+        <!----------Footer----------->
+
+        <footer>
+            <p>Copyright © TOUFIK HASAN 2020, All right reserved</p>
+        </footer>
+
+    </body>
 </html>
